--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -82,3 +82,10 @@ button {
 .view-wave.view-wave--project {
  box-shadow: -5px 0 200px 20px rgba($color: #000000, $alpha: 0.4);
 }
+
+@media (max-width: 900px) {
+ .pointer-circle,
+ .pointer {
+  display: none;
+ }
+}
