--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -76,4 +76,5 @@ cite {
 
 .title-letter {
  display: inline-block;
+ will-change: transform;
 }
